[package]
name = "yew-web-component"
version = "0.1.0"
edition = "2024"

[dependencies]
yew={version = "*", features = ["csr"]}
gloo = {version = "*"}
### 不使用 yew 下路由 以适配其他前端库使用
#yew-router = {version = "*"}
wasm-bindgen = {version = "0.2"}
web-sys = {version = "0.3"}
derivative = {version = "2"}
#yew-agent = {version = "0.3"}
#网络请求库
gloo-net = {version = "0.6"}